fix(ui): add img description

--- a/ui/src/app/views/navbar/navbar.html
+++ b/ui/src/app/views/navbar/navbar.html
@@ -1,6 +1,6 @@
 <nz-header id="navbar">
     <a href="#" [routerLink]="['/']">
-        <img src="assets/images/cds.png" class="item"
+        <img src="assets/images/cds.png" class="item" alt="CDS logo"
             title="{{'navbar_home' | translate}}" />
     </a>
     <ng-container *ngIf="currentAuthSummary">
