--- a/ui/src/app/views/workflow/show/admin/delete-modal/delete-modal.scss
+++ b/ui/src/app/views/workflow/show/admin/delete-modal/delete-modal.scss
@@ -1,7 +1,7 @@
 .content {
   max-height: 900px;
   overflow: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   .row {
     margin-bottom: 15px;
