--- a/ui/src/app/views/workflow/show/admin/delete-modal/delete-modal.html
+++ b/ui/src/app/views/workflow/show/admin/delete-modal/delete-modal.html
@@ -7,17 +7,13 @@
         </div>
         <div nz-row class="row">
             <div nz-col nzSpan="24">
-                <ng-container *ngIf="!confirm">
-                    <button nz-button nzType="primary" nzDanger class="right"
-                           (click)="confirm = true"
-                            nzPopconfirmPlacement="top">Delete</button>
-                </ng-container>
-                <ng-container *ngIf="confirm">
-                    <nz-button-group>
-                        <button nz-button (click)="confirm = false">Cancel</button>
-                        <button nz-button nzType="primary" [nzLoading]="loading"  nzDanger (click)="deleteWorkflow(false)">Delete</button>
-                    </nz-button-group>
-                </ng-container>
+                <button nz-popconfirm nzDanger nzType="primary" class="right"
+                        nzPopconfirmTitle="Are you sure you want to delete this workflow ?"
+                        (nzOnConfirm)="deleteWorkflow(false)"
+                        nzPopconfirmPlacement="topRight"
+                        nz-button>
+                    Delete
+                </button>
             </div>
         </div>
     </ng-container>
@@ -51,16 +47,13 @@
         </div>
         <div nz-row class="row">
             <div nz-col nzSpan="24">
-                <ng-container *ngIf="!confirmDeps">
-                    <button nz-button nzType="primary" nzDanger class="right"
-                            (click)="confirmDeps = true">Delete workflow and clean dependencies</button>
-                </ng-container>
-                <ng-container *ngIf="confirmDeps">
-                    <nz-button-group class="right">
-                        <button nz-button (click)="confirmDeps = false">Cancel</button>
-                        <button nz-button nzType="primary" nzDanger [nzLoading]="loading" (click)="deleteWorkflow(true)">Delete</button>
-                    </nz-button-group>
-                </ng-container>
+                <button nz-popconfirm nzDanger nzType="primary" class="right"
+                        nzPopconfirmTitle="Are you sure you want to delete this workflow and all his dependencies ?"
+                        (nzOnConfirm)="deleteWorkflow(true)"
+                        nzPopconfirmPlacement="topRight"
+                        nz-button>
+                    Delete workflow and clean dependencies
+                </button>
             </div>
         </div>
         <div nz-row class="row">
@@ -71,16 +64,13 @@
         </div>
         <div nz-row class="row">
             <div nz-col nzSpan="24">
-                <ng-container *ngIf="!confirmNoDeps">
-                    <button nz-button nzType="primary" nzDanger class="right"
-                            (click)="confirmNoDeps = true">Delete only the workflow</button>
-                </ng-container>
-                <ng-container *ngIf="confirmNoDeps">
-                    <nz-button-group class="right">
-                        <button nz-button (click)="confirmNoDeps = false">Cancel</button>
-                        <button nz-button nzType="primary" nzDanger [nzLoading]="loading" (click)="deleteWorkflow(false)">Delete</button>
-                    </nz-button-group>
-                </ng-container>
+                <button nz-popconfirm nzDanger nzType="primary" class="right"
+                        nzPopconfirmTitle="Are you sure you want to delete this workflow and keep all his dependencies ?"
+                        (nzOnConfirm)="deleteWorkflow(false)"
+                        nzPopconfirmPlacement="topRight"
+                        nz-button>
+                    Delete only the workflow
+                </button>
             </div>
         </div>
     </ng-container>
