--- a/ui/src/app/views/navbar/navbar.scss
+++ b/ui/src/app/views/navbar/navbar.scss
@@ -1,229 +1,223 @@
 @import "../../../common";
 
-.ui.menu.navbar {
-    background-color: $polar_grey_0;
-    border-radius: 0;
+#navbar {
+  padding-left: 0;
+  background-color: $darkTheme_grey_0;
+  border-radius: 0;
+  height: 50px;
+  display: flex;
+  align-items: center;
 
-    :host-context(.night) & {
-        background-color: $darkTheme_grey_0;
+  :host-context(.night) &, :host-context(.night){
+    background-color: $darkTheme_grey_0;
+    box-shadow: none;
+  }
+
+  img {
+    height: 50px;
+    padding: 5px 10px;
+    margin-right: 30px;
+  }
+
+  .right.menu {
+    display: flex;
+    align-items: center;
+    margin-left: auto!important;
+  }
+
+  .icon.dropdown {
+    width: 77px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .ml12 {
+    margin-left: 12px;
+
+    svg {
+      width: 12px;
+      height: 12px;
     }
+  }
 
-    i {
-        &.favorite {
-            color: $cds_favorite_color;
-        }
+  .item {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .item.link {
+    color: white;
+  }
+
+  .icon.popover {
+    width: 45px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .dropdown.title {
+    color: white;
+  }
+
+  nz-tag {
+    font-weight: bold;
+  }
+
+  .search {
+    width: 200px;
+    margin-right: 15px;
+  }
+
+  .details {
+    .ring {
+      height: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin: 0 20px;
     }
+  }
+}
 
-    img.item {
-        height: 50px;
-        padding: 5px 10px;
-        margin-right: 30px;
+i {
+  color: rgba(255, 255, 255, 0.85);
+}
+
+li {
+  a {
+    width: 100%;
+  }
+}
+
+.bookmark {
+  .details {
+    .title {
+      font-size: 1.1em;
+
+      &.bold {
+        font-weight: bold;
+      }
     }
+  }
+  .info {
+    font-size: 0.8em;
 
-    .ui.search {
-        padding-top: 6px;
-        height: 30px;
-        margin-right: 10px;
-
-        .ui.input {
-            .prompt {
-                background-color: rgba(225, 226, 229, 0.1);
-                border-color: transparent;
-                &:focus {
-                    border: 1.5px solid #50cfd9;
-                }
-                color: white;
-                opacity: 1;
-            }
-            i {
-                &.search.icon {
-                    opacity: 1;
-                }
-                color: white;
-                opacity: 1;
-            }
-        }
+    &.mt {
+      margin-top: 4px;
+      color: $polar_grey_3;
     }
+  }
+}
 
-    sm-select {
-        padding-top: 0px;
-        padding-bottom: 0px;
-        height: 50px;
-        display: flex;
-        align-items: center;
-    }
 
-    sm-dropdown {
-        height: 50px;
-        display: flex;
-    }
-
-    sm-item a {
-        color: black;
-    }
-
-    .item {
-        padding-top: 0px;
-        padding-bottom: 0px;
-        color: white;
-
-        a {
-            color: white;
-        }
-    }
-
-    .item.link::before {
-        width: 0px;
-    }
-
-    .details {
-        .ring {
-            height: 100%;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            margin: 0 20px;
-        }
-
-        .title {
-            font-size: 1.1em;
-
-            &.bold {
-                font-weight: bold;
-            }
-        }
-
-        .notif {
-            font-size: 0.8em;
-
-            &.bold {
-                font-weight: bold;
-            }
-
-            &.blue {
-                color: $cds_color_teal !important;
-            }
-
-            &.orange {
-                color: $cds_color_orange !important
-            }
-        }
-
-        .info {
-            font-size: 0.8em;
-
-            &.mt {
-                margin-top: 4px;
-            }
-        }
-    }
-
-    .notification {
-        background-color: transparent !important;
-
-        &:focus {
-            outline-style: none;
-        }
-
-        margin-left: 10px;
-
-        i {
-            margin-right: 0px;
-        }
-
-        .label {
-            top: 0.3em;
-            left: initial;
-            bottom: initial;
-            right: 0.1em;
-            line-height: 0.5em;
-        }
-
-        .nopadding {
-            padding: 0;
-            color: white;
-
-            .menu {
-                right: -1em;
-
-                &.transition {
-                    margin-top: 18px;
-                }
-            }
-        }
-    }
-
-    .theme-switch {
-        padding: 10px 16px;
-    }
+nz-switch {
+  margin-right: 10px;
 }
 
 .mt5 {
     margin-top: 5px;
 }
 
-.notif {
-    font-size: 0.8em;
-
-    &.bold {
-        font-weight: bold;
-    }
-
-    i {
-        &.check {
-            font-size: 1.5em;
-            color: black;
-            opacity: 0.3;
-
-            &:hover {
-                opacity: 1;
-            }
-        }
-    }
-
-    .title {
-        font-size: 1.3em;
-
-        &.bold {
-            font-weight: bold;
-        }
-
-        &.blue {
-            color: $cds_color_teal !important;
-        }
-
-        &.orange {
-            color: $cds_color_orange !important;
-        }
-    }
-
-    .info {
-        font-size: 1em;
-        color: inherit;
-        text-decoration: underline;
-        display: block;
-
-        &.mt {
-            margin-top: 4px;
-        }
-    }
-}
-
 .searchpopup {
     width: 550px;
-    .description {
+
+  .header {
+    height: 30px;
+  }
+
+  .right {
+    float: right;
+  }
+
+  .title {
+    padding-left: 20px;
+    padding-bottom: 20px;
+  }
+
+  .item {
+    padding-left: 20px;
+    height: 65px;
+    display: flex;
+    align-items: center;
+    border-top: 1px solid grey;
+
+    .content {
+      .description {
         padding-top: 2px;
         padding-bottom: 5px;
         a {
-            color: #4183c4 !important;
+          color: #1890ff !important;
         }
+      }
     }
+  }
+
+  i {
+    margin-right: 5px;
+  }
 }
 
 .notifpopup {
     width: 400px;
+    nz-list-item {
+      width: 100%;
+
+      a {
+        width: 100%;
+      }
+      .notif {
+        width: 100%;
+        font-size: 0.8em;
+
+        i {
+          font-size: 1.5em;
+          opacity: 0.5;
+
+          &:hover {
+            opacity: 1;
+          }
+        }
+
+        .title {
+          font-size: 1.3em;
+
+          &.bold {
+            font-weight: bold;
+          }
+
+          &.blue {
+            color: $cds_color_teal !important;
+          }
+
+          &.orange {
+            color: $cds_color_orange !important;
+          }
+        }
+
+        .info {
+          font-size: 1em;
+          color: inherit;
+          text-decoration: underline;
+          display: block;
+
+          &.mt {
+            margin-top: 4px;
+          }
+        }
+
+        a {
+          width: 100%;
+        }
+      }
+    }
 }
 
 .helppopup {
     width: 400px;
+}
+
+.borderRight {
+  border-right: 1px solid dimgrey;
 }
