fix(ui): unit test

--- a/ui/src/app/shared/requirements/list/requirements.list.html
+++ b/ui/src/app/shared/requirements/list/requirements.list.html
@@ -72,7 +72,7 @@
                 </td>
                 <td>
                     <div *ngIf="edit" class="center">
-                        <button nz-button nzDanger nzType="primary" (click)="deleteEvent(r)">Remove</button>
+                        <button name="deleteBtn" nz-button nzDanger nzType="primary" (click)="deleteEvent(r)">Remove</button>
                     </div>
                 </td>
             </tr>
