--- a/ui/src/app/views/navbar/navbar.scss
+++ b/ui/src/app/views/navbar/navbar.scss
@@ -28,6 +28,7 @@
   .icon.dropdown {
     width: 77px;
     display: flex;
+    height: 50px;
     align-items: center;
     justify-content: center;
 
